# lyric-video-generator

./: .gitignore  CLAUDE.md  ISSUES.md  M1_ISSUES.md  M2_ISSUES.md  M3_ISSUES.md  README.md  pyproject.toml  requirements.txt
examples/: sample_lyrics.json
src/animations/: base.py  fade.py  scroll.py  slide.py  typewriter.py
src/cli/: main.py
src/core/: audio_handler.py  lyrics_parser.py  song_resolver.py  text_renderer.py  theme_loader.py  video_generator.py
themes/: durt_nurs.json
